Use circular highlight path for find and zoom bars

This is consistent with the new close-x on bubbles. It also fixes ink
drops being out of sync with focus rings on Mac, since they were not
derived from the same path.

Bug: chromium:898806
Change-Id: I51ebd333b60435fee4b252a4db60e7ca459cea0d
Reviewed-on: https://chromium-review.googlesource.com/c/1309136
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604318}
Former-commit-id: f516bb765d0b90d855e2c40a6a500d01905b3b77